--- a/booklib/src/components/Card.css
+++ b/booklib/src/components/Card.css
@@ -1,6 +1,7 @@
 *{
     
     background-color: var(--cd-bg-dark);
+    z-index: -1;
 }
 .cards{
     height: auto;
@@ -55,6 +56,7 @@
     font-size: 22px;
     padding: 20px;
     padding-left: 0;
+   
 
 }
 .article-link {
@@ -65,6 +67,7 @@
     padding: 30px;
     padding-left: 0 ;
     padding-right: 0;
+    
 }
 .section-author{
     color: var(--secondary-text-d);
