--- a/booklib/src/components/Navbar.css
+++ b/booklib/src/components/Navbar.css
@@ -1,42 +1,39 @@
-
 .navbar{
     display: flex;
     flex-wrap: wrap;
     height: 5rem;
+   z-index: 0;
+}
+.navbar .logo{
+    height: 50px ;
+    width: 50px ;
    
 }
-.navbar img{
-    height: 60px !important;
-    width: 60px !important;
-}
-
-.navbar nav{
-    
+.navbar .nav{
     display: flex;
     align-items: end;
     justify-content: end;
     gap: 30px;
     padding-right: 70px;
-    font-size: 17px;
 }
-
-.navbar a{
+.navbar .link{
     text-decoration: none;
     color: var(--secondary-text-d);
     opacity: 0.7;
+    font-size: 17px;
 }
-.navbar a:hover{
+.navbar .link:hover{
     opacity: 1;
-    
     color: var(--primary-dark);
 }
 .navbar header{
     font-size: 30px;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     padding-top: 10px;
     font-weight: bolder;
     width: 50vw;
-    color: var(--primary-dark);
+    color: var(--primary-dark)
+    
 }
 .navbar section{
     padding-left: 40px;
@@ -45,12 +42,24 @@
     align-items:center ;
     justify-content: center;
 }
-a:hover{
+.link:hover{
     opacity: 1;
 }
 .navbar section .logo{
     background-color: var(--bg-dark);
-    height: 80px;
-    width: 80px;
+    height: 50px;
+    width: 50px;
     border-radius: 50%;
+    margin: 5px !important;
+}
+
+@media only screen and (max-width:800px) {
+    .navbar .nav{
+        display: none;
+    }
+    .navbar section .logo{
+        height: 50px;
+        width: 50px;
+    }
+
 }
