some minor changes

--- a/booklib/src/App.css
+++ b/booklib/src/App.css
@@ -4,7 +4,7 @@
     --primary-light : #007BFF;
     --primary-text-l:black;
     --secondary-text-l : #707070;
-    --bg-dark : #1e1e1e;
+    --bg-dark : #1c1c1c;
     --primary-text-d:#FFFFFF;
     --secondary-text-d:#b0b0b0;
     --primary-dark:#ffffff;
