--- a/booklib/src/components/Sidebar.css
+++ b/booklib/src/components/Sidebar.css
@@ -11,7 +11,7 @@
     justify-content: flex-start;
     gap: 10px;
     padding: 10px !important;
-    transition: translateX  0.3s;
+    transition: translateX  0.1s;
     transform: translateX(0%);
    
 }
@@ -32,24 +32,26 @@
     opacity: 1;
     display: flex;
     transform: translateX(100%);
-    transition: translateX 0.2s;
-    z-index: 4;
+    transition: translateX 0.1s linear , opacity , 0.1s linear;
+    z-index: 4
 
 }
 .button{
     display: flex;
     z-index:6 ;
     transform: translateX(0);
-    transition: all 0.2s;
+    transition: all 0.1s linear ;
     padding-right: 10px;
 }
 .button img{
     height: 50px;
     width: 50px;
     object-fit: contain;
+    mix-blend-mode:darken;
 }
 .sidebar a{
     opacity: 0.5;
+    background-color: var(--bg-dark);
 
 }
 .sidebar a:hover{
